tests/neg-custom-args/captures/toplevelUses1.check
-- [E223] CaptureChecking Error: tests/neg-custom-args/captures/toplevelUses1.scala:20:8 -------------------------------
20 |      M.c.println()      // error
   |      ^^^
   |      Reference `test.M.c` is not included in the allowed capture set {}
   |      of the enclosing object N in package test.
   |
   |      External uses should be declared explicitly with a uses clause in object N:
   |
   |          uses test.M.c
-- [E223] CaptureChecking Error: tests/neg-custom-args/captures/toplevelUses1.scala:21:6 -------------------------------
21 |      Console.println()  // error
   |      ^^^^^^^
   |      Reference `test.Console` is not included in the allowed capture set {}
   |      of the enclosing object N in package test.
   |
   |      Note that `test.Console` is a capability because it contains a field out: test.Stream^.
   |
   |      External uses should be declared explicitly with a uses clause in object N:
   |
   |          uses test.Console
   |
   |      where:    ^ refers to a root capability classified as SharedCapability in the type of value out
-- [E223] CaptureChecking Error: tests/neg-custom-args/captures/toplevelUses1.scala:22:6 -------------------------------
22 |      Console2.println() // error
   |      ^^^^^^^^
   |      Reference `test.Console2` is not included in the allowed capture set {}
   |      of the enclosing object N in package test.
   |
   |      Note that `test.Console2` is a capability because it uses {test.Console}.
   |
   |      External uses should be declared explicitly with a uses clause in object N:
   |
   |          uses test.Console2
-- [E223] CaptureChecking Error: tests/neg-custom-args/captures/toplevelUses1.scala:24:6 -------------------------------
24 |    M.c.println()        // error
   |    ^^^
   |    Reference `test.M.c` is not included in the allowed capture set {}
   |    of the enclosing constructor N in object N.
   |
   |    External uses should be declared explicitly with a uses_init clause in object N:
   |
   |        uses_init test.M.c
-- [E223] CaptureChecking Error: tests/neg-custom-args/captures/toplevelUses1.scala:25:4 -------------------------------
25 |    Console.println()    // error
   |    ^^^^^^^
   |    Reference `test.Console` is not included in the allowed capture set {}
   |    of the enclosing constructor N in object N.
   |
   |    Note that `test.Console` is a capability because it contains a field out: test.Stream^.
   |
   |    External uses should be declared explicitly with a uses_init clause in object N:
   |
   |        uses_init test.Console
   |
   |    where:    ^ refers to a root capability classified as SharedCapability in the type of value out
-- [E223] CaptureChecking Error: tests/neg-custom-args/captures/toplevelUses1.scala:26:4 -------------------------------
26 |    Console2.println()   // error
   |    ^^^^^^^^
   |    Reference `test.Console2` is not included in the allowed capture set {}
   |    of the enclosing constructor N in object N.
   |
   |    Note that `test.Console2` is a capability because it uses {test.Console}.
   |
   |    External uses should be declared explicitly with a uses_init clause in object N:
   |
   |        uses_init test.Console2
-- [E223] CaptureChecking Error: tests/neg-custom-args/captures/toplevelUses1.scala:28:4 -------------------------------
28 |  M.c.println()          // error
   |  ^^^
   |  Reference `test.M.c` is not included in the allowed capture set {}
   |  of the enclosing constructor N in object N.
   |
   |  External uses should be declared explicitly with a uses_init clause in object N:
   |
   |      uses_init test.M.c
-- [E223] CaptureChecking Error: tests/neg-custom-args/captures/toplevelUses1.scala:29:2 -------------------------------
29 |  Console.println()      // error
   |  ^^^^^^^
   |  Reference `test.Console` is not included in the allowed capture set {}
   |  of the enclosing constructor N in object N.
   |
   |  Note that `test.Console` is a capability because it contains a field out: test.Stream^.
   |
   |  External uses should be declared explicitly with a uses_init clause in object N:
   |
   |      uses_init test.Console
   |
   |  where:    ^ refers to a root capability classified as SharedCapability in the type of value out
-- [E223] CaptureChecking Error: tests/neg-custom-args/captures/toplevelUses1.scala:32:4 -------------------------------
32 |  M.c.println()          // error
   |  ^^^
   |  Reference `test.M.c` is not included in the allowed capture set {}
   |  of the enclosing top-level definitions in package test.
   |
   |  The top-level definitions should be wrapped in an object with a uses clause:
   |
   |      uses test.M.c
-- [E223] CaptureChecking Error: tests/neg-custom-args/captures/toplevelUses1.scala:33:2 -------------------------------
33 |  Console.println()      // error
   |  ^^^^^^^
   |  Reference `test.Console` is not included in the allowed capture set {}
   |  of the enclosing top-level definitions in package test.
   |
   |  Note that `test.Console` is a capability because it contains a field out: test.Stream^.
   |
   |  The top-level definitions should be wrapped in an object with a uses clause:
   |
   |      uses test.Console
   |
   |  where:    ^ refers to a root capability classified as SharedCapability in the type of value out
